--- a/cookbooks/tsuru/templates/default/gandalf.conf.erb
+++ b/cookbooks/tsuru/templates/default/gandalf.conf.erb
@@ -1,12 +1,12 @@
-bin-path: <%= @gandalf_dir %>/dist/gandalf
+bin-path: <%= node[:tsuru][:gandalf_dir] %>/dist/gandalf
 database:
-    url: <%= @db_url %>
-    name: <%= @gandalf_db_name %>
+    url: <%= node[:tsuru][:db_url] %>
+    name: <%= node[:tsuru][:gandalf_db_name] %>
 git:
     bare:
-        location: <%= @repos_dir %> # you'll need to create this dir and chown it to your user, if you change it, remember changing in setup/install.sh script
+        location: <%= node[:tsuru]][:repos_dir] %> # you'll need to create this dir and chown it to your user, if you change it, remember changing in setup/install.sh script
         template: /home/git/bare-template # this configuration is optional, if you don't have any custom stuff in your bare, just comment it
-host: <%= @gandalf_host %>
+host: <%= node[:tsuru][:gandalf_host] %>
 webserver:
-    port: ":<%= @gandalf_web_port %>"
+    port: ":<%= node[:tsuru][:gandalf_web_port] %>"
 
