--- a/cookbooks/tsuru/templates/default/tsuru.conf.erb
+++ b/cookbooks/tsuru/templates/default/tsuru.conf.erb
@@ -1,15 +1,15 @@
 listen: "0.0.0.0:8080"
-use-tls: false
+use-tls: <%= node[:tsuru][:use_tls] %>
 #tls-cert-file: /path/to/cert.pem
 #tls-key-file: /path/to/key.pem
 database:
   url: <%= @tsuru_db_url %>
-  name: <%= @tsuru_db_name %>
+  name: <%= node[:tsuru][:tsuru_db_name] %>
 git:
   unit-repo: /home/application/current
   host: gandalf.plataformas.glb.com
   protocol: http
-  port: <%= @git_port %>
+  port: <%= node[:tsuru][:git_port] %>
 bucket-support: true
 aws:
   access-key-id: access-id-here
@@ -27,7 +27,7 @@ auth:
   token-expire-days: 2
   token-key: TSURU-KEY
 juju:
-  charms-path: /home/charms
+  charms-path: /home/git/charms
   units-collection: juju_units
   elb-collection: juju_load_balancers
   use-elb: false
