--- a/cookbooks/tsuru/templates/default/tsuru.conf.erb
+++ b/cookbooks/tsuru/templates/default/tsuru.conf.erb
@@ -3,7 +3,7 @@ use-tls: <%= node[:tsuru][:use_tls] %>
 #tls-cert-file: /path/to/cert.pem
 #tls-key-file: /path/to/key.pem
 database:
-  url: <%= @tsuru_db_url %>
+  url: <%= node[:tsuru][:db_url] %>
   name: <%= node[:tsuru][:tsuru_db_name] %>
 git:
   unit-repo: /home/application/current
