add abyss provision

--- a/cookbooks/tsuru/templates/default/gandalf.conf.erb
+++ b/cookbooks/tsuru/templates/default/gandalf.conf.erb
@@ -1,4 +1,4 @@
-bin-path: <%= node[:tsuru][:gandalf_dir] %>/dist/gandalf
+bin-path: <%= node[:tsuru][:git_home_dir] %>/dist/gandalf
 database:
     url: <%= node[:tsuru][:db_url] %>
     name: <%= node[:tsuru][:gandalf_db_name] %>
