tested last changes

--- a/cookbooks/tsuru/templates/default/tsuru.conf.erb
+++ b/cookbooks/tsuru/templates/default/tsuru.conf.erb
@@ -9,7 +9,7 @@ git:
   unit-repo: /home/git/repositories
   host: 127.0.0.1
   protocol: http
-  port: <%= node[:tsuru][:git_port] %>
+  port: <%= node[:tsuru][:gandalf_web_port] %>
 bucket-support: true
 aws:
   access-key-id: access-id-here
