--- a/cookbooks/tsuru/templates/default/tsuru.conf.erb
+++ b/cookbooks/tsuru/templates/default/tsuru.conf.erb
@@ -10,7 +10,7 @@ git:
   host: 127.0.0.1
   protocol: http
   port: <%= node[:tsuru][:gandalf_web_port] %>
-bucket-support: true
+bucket-support: false
 aws:
   access-key-id: access-id-here
   secret-access-key: secret-very-secret
